--- a/03_exercises (2).Rmd
+++ b/03_exercises (2).Rmd
@@ -12,7 +12,7 @@ output:
 
 
 ```{r setup, include=FALSE}
-#knitr::opts_chunk$set(echo = TRUE, error=TRUE, message=FALSE, warning=FALSE)
+knitr::opts_chunk$set(echo = TRUE, error=TRUE, message=FALSE, warning=FALSE)
 ```
 
 ```{r libraries}
@@ -304,23 +304,28 @@ Stations %>%
             by = c("name" = "sstation")) %>%
   group_by(name) %>% 
   mutate(total_departures = n()) %>% 
-  ggplot(aes(x = lat, y = long, size = total_departures)) +
+  ggplot(aes(x = long, y = lat, size = total_departures)) +
   geom_jitter(alpha = 0.3) +
-  labs(title = "Total Departures from Each Rental Location (in spatial relation to each other) ", x = "Latitude", y ="Longitude")
+  labs(title = "Total Departures from Each Rental Location (in spatial relation to each other) ", x = "Longitude", y ="Latitude")
 ```
   
   16. Only 14.4% of the trips in our data are carried out by casual users. Create a plot that shows which area(s) have stations with a much higher percentage of departures by casual users. What patterns do you notice? (Again, we'll improve this next week when we learn about maps).
-  
+
+
 ```{r}
 Stations %>%
   left_join(Trips,
             by = c("name" = "sstation")) %>%
-  group_by(name) %>% 
-  mutate(total_departures = n()) %>% 
-  ggplot(aes(x = lat, y = long, size = total_departures, color = client)) +
-  geom_jitter(alpha = 0.3) +
-  labs(title = "Total Departures from Each Rental Location (in spatial relation to each other) ", x = "Latitude", y ="Longitude")
+  group_by(name, long, lat) %>% 
+  summarize(percent_casual= mean(client == "Casual")) %>% 
+  ggplot(aes(x = long, y = lat, color = percent_casual)) +
+  geom_point() +
+  labs(title = "Total Departures from Each Rental Location (in spatial relation to each other", 
+       x = "Longitude", 
+       y ="Latitute")
 ```
+The areas with a much higher percentage of Casual users are almost all centrally located with respect to the other rental locations.
+
   
 ### Spatiotemporal patterns
 
@@ -382,13 +387,31 @@ A large proportion of Casual users' trips (~0.92) are made on the weekends, Satu
 
   20. Below, provide a link to your GitHub page with this set of Weekly Exercises. Specifically, if the name of the file is 03_exercises.Rmd, provide a link to the 03_exercises.md file, which is the one that will be most readable on GitHub.
   
-  
+[03_exercises--2-.md](https://github.com/willorser/Weekly-Exercises-3-New/blob/master/03_exercises--2-.md) 
+
 
 ## Challenge problem! 
 
 This problem uses the data from the Tidy Tuesday competition this week, `kids`. If you need to refresh your memory on the data, read about it [here](https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-09-15/readme.md). 
 
   21. In this exercise, you are going to try to replicate the graph below, created by Georgios Karamanis. I'm sure you can find the exact code on GitHub somewhere, but **DON'T DO THAT!** You will only be graded for putting an effort into this problem. So, give it a try and see how far you can get without doing too much googling. HINT: use `facet_geo()`. The graphic won't load below since it came from a location on my computer. So, you'll have to reference the original html on the moodle page to see it.
+
+```{r}
+kids <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-09-15/kids.csv')
+
+kids %>% 
+  filter(year == c("1997", "2007")) %>% 
+  mutate(inf_adj_perchild = inf_adj_perchild * 1000) %>% 
+  pivot_wider(id_cols = state, 
+              names_from = year, 
+              names_prefix = "year_", 
+              values_from = inf_adj_perchild) %>% 
+  mutate(diff = year_2016 - year_1997) %>% 
+  ggplot(aes(x = inf_adj_perchild)) +
+  geom_point() +
+  geom_segment() +
+  facet_geo(vars(state))
+```
   
 
 
